<resources>
    <string name="app_name">お仕事マッチング</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home">ホーム</string>
    <string name="favorite">お気に入りリスト</string>
    <string name="company">企業一覧</string>
    <string name="search">検索</string>
    <string name="my_page">マイページ</string>

    <string name="user_action">仕事を探す</string>
    <string name="company_action">依頼する</string>

    <string name="attention">この度は〇〇サービスの利用を検討いただきありがとうございます。このサービスは、働きたい人と会社とのマッチングをサポートするサービスです。主な概要はこちらからご覧ください。\nhogehoge\nなお、次に進むボタンを押された際は下記の利用規約に同意したものとみなしますのでご注意ください。\n\n利用規約\nhogehogehogehoge</string>

    <string name="next">進む</string>
    <string name="back">戻る</string>
    <string name="create">登録する</string>

    <string name="about_job">仕事の依頼について</string>

    <string name="write_company">仕事内容を記入</string>

    <string name="company_name">企業名</string>
    <string name="error_company">企業名を入力してください</string>
    <string name="require_people">募集人員</string>
    <string name="error_people">募集人員を入力してください</string>
    <string name="job">職業</string>
    <string name="office_work">事務作業</string>
    <string name="sales">営業</string>
    <string name="create_game">ゲーム制作</string>
    <string name="project">企画・提案</string>
    <string name="crete_server">サーバー作り</string>
    <string name="post_movie">動画投稿</string>
    <string name="start_job">就業開始日</string>
    <string name="detail_name">業務内容の詳細</string>
    <string name="error_detail">業務内容の詳細を入力してください</string>
    <string name="area_name">地域名</string>
    <string name="error_area">地域名を入力してください</string>
    <string name="phone_number">電話番号</string>
    <string name="error_phone">電話番号を入力してください</string>
    <string name="mail_address">メールアドレス</string>
    <string name="error_mail">メールアドレスを入力してください</string>

    <string name="post_error_name">名前を入力してください</string>
    <string name="post_error_address">住所を入力してください</string>
    <string name="post_error_phone">電話番号を入力してください</string>
    <string name="post_error_mail">メールアドレスを入力してください</string>

    <string name="dialog_error_title">エラー</string>
    <string name="dialog_error_message">入力不足の項目があります</string>
    <string name="dialog_complete">登録が完了しました</string>

    <string name="job_title">CA Tech Kids</string>
    <string name="job_content">この冬、今話題の「教育×IT」の世界を触れてみませんか？
    ☆━ 　*＜(　＾ｍ＾)ノ*.｡+ﾟ* 由*.｡+ﾟ* ヽ(＾ｍ＾　)＞*　 ━★
    サイバーエージェントグループ小学生向けプログラミング教育事業　学生スタッフ募集！☆
    ※プログラミング未経験OK！！
    ▼詳細はこちら
    https://goo.gl/gYqfs8
    ★━━━━━━━━━━━━━━━━━━━━━━━━━━━☆
    　
    サイバーエージェントの行うプログラミング教育事業（CA Tech Kids）では、小学生にプログラミング学習のサポートをしてくれる学生スタッフを大募集いたします！
    　
    【サイバーエージェント教育事業 学生スタッフとは…】
    小学生向けプログラミングイベントにて、子どもたちにプログラミング学習のサポートをするお仕事です！
    　
    ・子供が好きな人
    ・教育に興味がある人
    ・プログラミング経験がある人
    ・プログラミングは未経験だが、勉強する意欲がある、興味がある人
    　
    ひとつでも当てはまっていればぜひ説明会へ！
    ※プログラミング経験者大歓迎です！
    ※日程が合わない方は個別に日程調整します！
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    ▼業務の詳細・説明会の申し込みはこちら
    https://goo.gl/gYqfs8
    ▼説明会日程調整やご不明な点につきましてはお気軽にお問い合わせください。
    MAIL: mentor@ca-techkids.com
    TEL : 03-5459-0212
    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    説明会の日程が合わない、応募を迷っている、そんな方も気軽にご相談ください♪
    ◎TechKidsが知りたい方はこちら
    Facebookページ：https://goo.gl/7RHn3y
    イベント動画：https://goo.gl/oGMD5u
    子供作品集：https://goo.gl/whAHs2
    サイバーエージェント内記事：https://goo.gl/jTdXHJ
    ◎TechKidsメディア掲載記事
    https://goo.gl/aIW42t
    https://goo.gl/losIOq
    あなたのご参加、お待ちしております！
    ♪♪ご応募はコチラから ↓↓↓ ♪♪
    https://goo.gl/gYqfs8</string>

</resources>
