<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/about_job"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/attention"
            android:textSize="20sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/next"
            android:layout_alignStart="@+id/next"
            android:layout_below="@+id/next"
            android:background="@drawable/circle_yellow_button"
            android:text="@string/back"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@+id/textView2"
            android:background="@drawable/circle_blue_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/next"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>