<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/job_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/require_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="・募集人員"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/require_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/require_title"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="10人"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/job_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/require_people"
                    android:text="・職業"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/job_title"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/office_work"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/job_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content"
                    android:text="・業務詳細"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/job_detail_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/job_detail_title"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/job_content"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/start_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/job_detail_content"
                    android:text="・就業開始日"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/start_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/start_title"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="2016/12/7から2017/1/10まで"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/area_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/start_day"
                    android:text="・地域名"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/area_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/area_title"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="大阪府"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/area_name"
                    android:text="・電話番号"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/phone_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_title"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="0120-12-3456"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/mail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_content"
                    android:text="・メールアドレス"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/mail_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mail_title"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="taku178.24@hotmail.co.jp"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mail_content"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="50dp"
                        android:layout_marginStart="50dp"
                        android:text="@string/back" />

                    <Button
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="50dp"
                        android:layout_marginRight="50dp"
                        android:text="応募する" />

                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/view2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="@android:color/white"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/plus"
        app:borderWidth="0dp"
        app:elevation="13dp"
        app:fabSize="normal" >

    </android.support.design.widget.FloatingActionButton>

</RelativeLayout>